@@ -1,3 +1,11 @@
+2009-03-01  Doug Evans  <dje@google.com>
+
+	* gdbserver/Makefile.in (INCLUDE_CFLAGS): Add -I$(srcdir)/../common.
+	(server_h): Add gdb_signals.h.
+	(signals.o): Update.
+	* server.h (target_signal_from_host,target_signal_to_host_p)
+	(target_signal_to_host,target_signal_to_name): Moved to gdb_signals.h.
+
 2009-02-14  Pierre Muller  <muller@ics.u-strasbg.fr>
 
 	* remote-utils.c (getpkt): Also generate remote-debug
